objects/TimeTrack__c.object
<CustomObject>
    <description>Created by AppSheet</description>
    <fields>
        <fullName>Client_Contact__c</fullName>
        <label>Client Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <label>Client</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>End_Time__c</fullName>
        <label>End Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Minutes_Consulted__c</fullName>
        <label>Minutes Consulted</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <label>TimeTrack</label>
    <nameField>
        <label>Client</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TimeTracks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>